# Lumit

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
crates/kiriko-app/src/: main.rs
crates/kiriko-core/src/: anim.rs  lib.rs  markers.rs  model.rs  ops.rs  retime.rs  sequence.rs  store.rs
crates/kiriko-eval/: Cargo.toml
crates/kiriko-eval/src/: graph.rs  lib.rs  schedule.rs
crates/kiriko-flow/: Cargo.toml
crates/kiriko-media/: Cargo.toml
crates/kiriko-media/src/: index.rs
crates/kiriko-text/: Cargo.toml
crates/kiriko-text/src/: lib.rs
crates/kiriko-ui/: Cargo.toml
crates/kiriko-ui/src/: app_state.rs  export.rs  icons.rs  native_menu.rs  shell.rs  theme.rs
crates/luminal-app/: Cargo.toml
crates/luminal-app/src/: main.rs
crates/luminal-audio/: Cargo.toml
crates/luminal-audio/src/: beat.rs  lib.rs  mix.rs
crates/luminal-cache/: Cargo.toml
crates/luminal-cache/src/: lib.rs
crates/luminal-core/: Cargo.toml
crates/luminal-core/src/: anim.rs  lib.rs  markers.rs  mask.rs  model.rs  ops.rs  retime.rs  sequence.rs  store.rs  time.rs
crates/luminal-eval/: Cargo.toml
crates/luminal-eval/src/: epoch.rs  graph.rs  lib.rs  schedule.rs
crates/luminal-flow/: Cargo.toml
crates/luminal-flow/src/: lib.rs
crates/luminal-gpu/: Cargo.toml
crates/luminal-gpu/src/: colour.wgsl  composite.rs  composite.wgsl  lib.rs  oklab.rs  oklab.wgsl
crates/luminal-media/: Cargo.toml
crates/luminal-media/src/: audio.rs  decode.rs  encode.rs  index.rs  lib.rs  probe.rs
crates/luminal-project/: Cargo.toml
crates/luminal-project/src/: lib.rs
crates/luminal-text/: Cargo.toml
crates/luminal-text/src/: lib.rs
crates/luminal-ui/: Cargo.toml
crates/luminal-ui/src/: app_state.rs  export.rs  icons.rs  lib.rs  native_menu.rs  pixels.rs  shell.rs  splash.rs  theme.rs
crates/lumit-app/src/: main.rs
crates/lumit-audio/src/: beat.rs  lib.rs  mix.rs
crates/lumit-bridge/: Cargo.toml
crates/lumit-bridge/src/: columns.rs  edits.rs  export.rs  ffi.rs  lib.rs  render.rs  retime.rs  snapshot.rs  state.rs
crates/lumit-cache/src/: disk.rs  lib.rs
crates/lumit-core/src/: fx.rs  lib.rs  lut.rs  model.rs  ops.rs  retime.rs  sequence.rs  store.rs
crates/lumit-eval/: Cargo.toml
crates/lumit-eval/src/: exec.rs  graph.rs  lib.rs  pool.rs  schedule.rs
crates/lumit-flow/: Cargo.toml
crates/lumit-flow/src/: dis.wgsl  gpu.rs  lib.rs
crates/lumit-gpu/: Cargo.toml
crates/lumit-gpu/src/: composite.rs  composite.wgsl  fx.rs  fx_block_glitch.wgsl  fx_chromatic.wgsl  fx_dirblur.wgsl  fx_dof.wgsl  fx_echo.wgsl  fx_exposure.wgsl  fx_flash.wgsl  fx_grade.wgsl  fx_invert.wgsl  fx_lut.wgsl  fx_matte_key.wgsl  fx_motionblur.wgsl  fx_radialblur.wgsl  fx_rgbsplit.wgsl  fx_scanlines.wgsl  fx_shake_mb.wgsl  fx_sharpen.wgsl  fx_sharpen_simple.wgsl  fx_tint.wgsl  fx_transform.wgsl  fx_vibrancy.wgsl  fx_vignette.wgsl  lib.rs  scope.rs  scope.wgsl
crates/lumit-gpu/src/fx/: blur.rs  colour.rs  common.rs  engine.rs  mod.rs  stylise.rs  temporal.rs  tests.rs
crates/lumit-gpu/tests/: exec_skeleton.rs
crates/lumit-keymap/: Cargo.toml
crates/lumit-keymap/src/: lib.rs
crates/lumit-media/src/: encode.rs  index.rs  probe.rs
crates/lumit-project/: Cargo.toml
crates/lumit-project/benches/: document_scale.rs
crates/lumit-project/src/: fixtures.rs  lib.rs
crates/lumit-ui/: Cargo.toml
crates/lumit-ui/src/: app_state.rs  export.rs  fxops.rs  headless.rs  lib.rs  native_menu.rs  pixels.rs  preset.rs  shell.rs  splash.rs  theme.rs
crates/lumit-ui/src/app_state/: compositions.rs  diskio.rs  layers.rs  media.rs  mod.rs  playback.rs  preview.rs  preview_tests.rs  previewing.rs  project.rs  tests.rs
crates/lumit-ui/src/shell/: app_update.rs  command_palette.rs  dialogs.rs  dock.rs  dock_tests.rs  draws.rs  export_actions.rs  eyedropper.rs  geometry_tests.rs  gpu.rs  graph.rs  inspector.rs  lane_tests.rs  mod.rs  overlays.rs  panels.rs  settings.rs  shortcuts.rs  timeline.rs  widgets.rs
crates/lumit-ui/src/shell/inspector/: controls.rs  effect_rows.rs  keyframe_nav.rs  mod.rs  speed_rows.rs  tests.rs  transform_rows.rs
crates/lumit-ui/src/shell/timeline/: bottom_bar.rs  lane.rs  menu.rs  panel.rs  tests.rs
docs/: 00-VISION.md  01-GLOSSARY.md  02-DECISIONS.md  03-DATA-MODEL.md  04-RETIMING.md  05-ARCHITECTURE.md  06-RENDER-PIPELINE.md  07-UI-SPEC.md  08-EFFECTS.md  09-AUDIO.md  10-FILE-FORMAT.md  11-AE-IMPORT.md  12-PLUGINS.md  13-PERFORMANCE-RULES.md  14-ENGINEERING-RULES.md  15-DESIGN.md  16-ROADMAP.md  GUIDE.md  implementation-audit-2026-07-20.md  implementation-dependency-graph.md  test-feedback-log.md
docs/flutter-port/: 03-ARCHITECTURE.md  05-PARITY-CHECKLIST.md  06-REMAINING-WORK.md  07-AUDIT-2026-07-22.md  README.md
docs/impl/: README.md  gpu-foundation.md  keyframe-eval.md  layer-input.md  lut.md  media-io.md  ofx-host.md  optical-flow.md  phase-0-kickoff.md  rational-time.md  temporal-rerender.md
docs/research/: research-smooth-style.md
flutter_ui/: .metadata  pubspec.yaml
flutter_ui/lib/bridge/: beats_worker.dart  bridge.dart
flutter_ui/lib/panels/: effect_controls_panel.dart  effects_presets_panel.dart  panels.dart  placeholder.dart  preview_isolate.dart  preview_source.dart  project_panel.dart  scopes_panel.dart  timeline_panel.dart  viewer_overlays.dart  viewer_panel.dart
flutter_ui/lib/shell/: command_palette.dart  dock_widget.dart  menu_bar.dart  settings_window.dart  shell.dart  splash.dart
flutter_ui/lib/state/: app_state.dart  file_dialogs.dart  settings.dart  (+1 more)
flutter_ui/linux/: CMakeLists.txt
flutter_ui/test/: bridge_test.dart  colour_picker_test.dart  edit_ops_test.dart  f4_editors_test.dart  f4_effects_test.dart  final_sweep_test.dart  final_ui_wave_test.dart  settings_test.dart  shell_smoke_test.dart  timeline_graph_ui_test.dart  timeline_test.dart  transform_preview_test.dart  viewer_gizmo_test.dart  viewer_scopes_test.dart
packaging/flatpak/: io.github.luminalmvm.Lumit.desktop  io.github.luminalmvm.Lumit.metainfo.xml  io.github.luminalmvm.Lumit.yml
scripts/: win-dev-env.ps1
(+25 files in other folders)
