[package]
name = "kiriko-ui"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
egui = "0.31"
kiriko-core = { path = "../kiriko-core" }
kiriko-media = { path = "../kiriko-media", optional = true }
kiriko-project = { path = "../kiriko-project" }
rfd = "0.15"
uuid = { version = "1", features = ["v7"] }
egui_dock = { version = "0.16", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# "media" wires probing/frame-indexing (ffmpeg). Default on; Windows CI builds
# --no-default-features until ffmpeg dev libs are set up there (tracked TODO).
default = ["media"]
media = ["dep:kiriko-media"]

[target.'cfg(target_os = "macos")'.dependencies]
muda = "0.15"

[dev-dependencies]
kiriko-media = { path = "../kiriko-media", features = ["test-fixtures"] }
tempfile = "3"

[lints]
workspace = true
