[package]
name = "kiriko-ui"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
egui = "0.31"
kiriko-core = { path = "../kiriko-core" }
egui-wgpu = { version = "0.31", optional = true }
kiriko-audio = { path = "../kiriko-audio", optional = true }
kiriko-cache = { path = "../kiriko-cache", optional = true }
kiriko-eval = { path = "../kiriko-eval", optional = true }
kiriko-gpu = { path = "../kiriko-gpu", optional = true }
kiriko-media = { path = "../kiriko-media", optional = true }
kiriko-text = { path = "../kiriko-text" }
kiriko-project = { path = "../kiriko-project" }
rfd = "0.15"
uuid = { version = "1", features = ["v7"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
egui_tiles = { version = "0.12", features = ["serde"] }

[features]
# "media" wires probing/frame-indexing (ffmpeg). Default on; Windows CI builds
# --no-default-features until ffmpeg dev libs are set up there (tracked TODO).
default = ["media"]
media = ["dep:kiriko-media", "dep:kiriko-audio", "dep:kiriko-cache", "dep:kiriko-eval", "dep:kiriko-gpu", "dep:egui-wgpu"]

[target.'cfg(target_os = "macos")'.dependencies]
muda = "0.15"

[dev-dependencies]
kiriko-media = { path = "../kiriko-media", features = ["test-fixtures"] }
tempfile = "3"

[lints]
workspace = true
