[package]
name = "luminal-core"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
arc-swap = "1"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v7", "serde"] }

[dev-dependencies]
proptest = "1"
serde_json = "1"

[lints]
workspace = true
