[package]
name = "luminal-project"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
directories = "6"
luminal-core = { path = "../luminal-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v7", "serde"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
