[package]
name = "lumit-project"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
blake3 = "1"
directories = "6"
lumit-core = { path = "../lumit-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v7", "serde"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
# Lean: no default features, so no HTML/plotters pulled into CI.
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
tempfile = "3"

[[bench]]
name = "document_scale"
harness = false

[lints]
workspace = true
